Fix misaligned tab seperators

--- a/chrome/tabbar/tabbar.css
+++ b/chrome/tabbar/tabbar.css
@@ -1,10 +1,3 @@
-.tabbrowser-tab .tab-close-button {
-  display: none;
-}
-.tabbrowser-tab:not([pinned]):hover .tab-close-button {
-  display: -moz-box !important;
-}
-
 :-moz-any(.titlebar-placeholder, .titlebar-spacer)[type="pre-tabs"] {
   width: 0 !important;
 }
@@ -14,7 +7,9 @@
     -moz-appearance: none !important;
   }
 
-  :root:-moz-any([inFullscreen], [tabsintitlebar]):not([privatebrowsingmode="temporary"])
+  :root:-moz-any([inFullscreen], [tabsintitlebar]):not(
+      [privatebrowsingmode="temporary"]
+    )
     #TabsToolbar:not(:-moz-lwtheme) {
     background-color: #dee1e5 !important;
     color: #606367 !important;
@@ -22,7 +17,9 @@
     --toolbarbutton-active-background: #bec0c5 !important;
   }
 
-  :root:-moz-any([inFullscreen], [tabsintitlebar]):not([privatebrowsingmode="temporary"])
+  :root:-moz-any([inFullscreen], [tabsintitlebar]):not(
+      [privatebrowsingmode="temporary"]
+    )
     #TabsToolbar:not(:-moz-lwtheme):-moz-window-inactive {
     background-color: #e7eaed !important;
   }
@@ -32,7 +29,7 @@
   }
 }
 
-@media (-moz-os-version: windows-win7) {
+@media (-moz-platform: windows-win7) {
   :root:not([privatebrowsingmode="temporary"]) #TabsToolbar:not(:-moz-lwtheme) {
     color: #808387 !important;
     --toolbarbutton-hover-background: rgba(196, 198, 204, 0.8) !important;
@@ -57,6 +54,10 @@
   }
 }
 
+:root[privatebrowsingmode] #TabsToolbar {
+  color: #808387 !important;
+}
+
 /* < FF 65, >= FF 65 */
 :-moz-any(.titlebar-placeholder, .titlebar-spacer) {
   border: 0 !important;
@@ -72,6 +73,13 @@
   :-moz-any(.titlebar-placeholder, .titlebar-spacer)[type="post-tabs"] {
     width: 8px !important;
   }
+}
+
+:root[privatebrowsingmode] #TabsToolbar {
+  background-color: var(
+    --lwt-accent-color-inactive,
+    var(--lwt-accent-color)
+  ) !important;
 }
 
 /* vertically center buttons in tab bar */
@@ -146,7 +154,7 @@
   background-color: currentColor !important;
   width: 1px !important;
   height: 20px !important;
-  transform: translateY(-10px) !important;
+  /* transform: translateY(10px) !important; */
   opacity: 0 !important;
   transition: opacity 0.2s var(--ease-basic) !important;
 }
@@ -216,6 +224,7 @@
   opacity: var(--tab-opacity) !important;
   visibility: visible !important;
   box-shadow: none !important;
+  outline: none !important;
 }
 
 /* rounded bottom corners */
@@ -258,7 +267,9 @@
   + .tabbrowser-tab:not([visuallyselected]):not(:hover):not([multiselected])
   .tab-content::before,
 #tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow])
-  .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not(:hover):not([multiselected])
+  .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not(:hover):not(
+    [multiselected]
+  )
   .tab-content::after {
   opacity: var(--tab-separator-opacity) !important;
 }
@@ -299,9 +310,15 @@
   padding-inline-start: 8px !important;
 }
 
-.tabbrowser-tab[pinned]:-moz-any([soundplaying], [muted], [activemedia-blocked])
+.tabbrowser-tab:-moz-any([soundplaying], [muted], [activemedia-blocked]):not(
+    [pinned]
+  )
   .tab-icon-image {
   visibility: hidden !important;
+}
+
+.tab-icon-sound-label {
+  display: none !important;
 }
 
 .tabbrowser-tab[fadein] .tab-close-button {
@@ -330,13 +347,21 @@
 }
 
 .tab-close-button:hover,
-.tab-icon-overlay:-moz-any([soundplaying], [muted], [activemedia-blocked]):hover,
+.tab-icon-overlay:-moz-any(
+    [soundplaying],
+    [muted],
+    [activemedia-blocked]
+  ):hover,
 .tab-icon-sound:hover {
   background-color: var(--toolbarbutton-hover-background) !important;
 }
 
 .tab-close-button:hover:active,
-.tab-icon-overlay:-moz-any([soundplaying], [muted], [activemedia-blocked]):hover:active,
+.tab-icon-overlay:-moz-any(
+    [soundplaying],
+    [muted],
+    [activemedia-blocked]
+  ):hover:active,
 .tab-icon-sound:hover:active {
   background-color: var(--toolbarbutton-active-background) !important;
 }
@@ -384,22 +409,26 @@
 }
 
 #tabbrowser-tabs[closebuttons="activetab"]
-  /* .tabbrowser-tab:not([visuallyselected])
+  .tabbrowser-tab:not([visuallyselected])
   .tab-close-button {
-  visibility: collapse !important; */
+  visibility: collapse !important;
 }
 
 #tabbrowser-tabs[closebuttons="activetab"]
   .tab-label-container[textoverflow][labeldirection="ltr"]:not([pinned]),
 #tabbrowser-tabs[closebuttons="activetab"]
-  .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(ltr):not([pinned]) {
+  .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(
+    ltr
+  ):not([pinned]) {
   mask-image: linear-gradient(to right, black 70%, transparent) !important;
 }
 
 #tabbrowser-tabs[closebuttons="activetab"]
   .tab-label-container[textoverflow][labeldirection="rtl"]:not([pinned]),
 #tabbrowser-tabs[closebuttons="activetab"]
-  .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(rtl):not([pinned]) {
+  .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(
+    rtl
+  ):not([pinned]) {
   mask-image: linear-gradient(to left, black 70%, transparent) !important;
 }
 
@@ -479,19 +508,19 @@
 }
 
 #tabbrowser-tabs[overflow] .tabbrowser-tab[last-visible-tab]:not([pinned]) {
-  margin-inline-end: 7px !important;
+  margin-inline-end: 8px !important;
 }
 
 .tabbrowser-tab[usercontextid] > .tab-stack::after {
   content: "" !important;
   position: absolute !important;
   display: flex !important;
-  bottom: 0 !important;
-  left: 8px !important;
-  width: calc(100% - 16px) !important;
-  height: 2px !important;
+  bottom: calc(100% - 12px) !important;
+  left: calc(100% - 9px) !important;
+  width: 6px !important;
+  height: 6px !important;
+  border-radius: 99px !important;
   box-sizing: border-box !important;
-  border-radius: 99px 99px 0 0 !important;
   transform: none !important;
   background: var(--identity-tab-color) !important;
   transition-property: top, bottom, left, right, width, height, border-radius;
@@ -499,16 +528,12 @@
   transition-timing-function: var(--ease-out) !important;
 }
 
-.tab-bottom-line {
-  display: none !important;
+.tab-context-line {
+  visibility: hidden !important;
 }
 
-.tabbrowser-tab[usercontextid][selected] > .tab-stack::after {
-  bottom: calc(100% - 9px) !important;
-  left: calc(100% - 9px) !important;
-  width: 6px !important;
-  height: 6px !important;
-  border-radius: 99px !important;
+.tab-bottom-line {
+  display: none !important;
 }
 
 /* < 72 */
